initial docker configuration done

--- a/.env.dev
+++ b/.env.dev
@@ -1,20 +1,19 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=base64:/NC6CNBiDJb2vV4fRviEsMqy5gKbePRgk44JGkZFAYY=
+APP_NAME=SoftCity
+APP_ENV=dev
+APP_KEY=base64:G+m9Su2fOX3uLTLvYRPbLVShvC8n04XXESH8XPlB2HU=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
-# ASSET_URL="${APP_URL}"
+APP_URL=https://admin.softcityos.com
 APP_MODE=dev
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=multi_food_db
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=dg
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
