--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,16 @@
-.git
-.env
+/.git*
+/.idea*
+.dockerignore
+.editorconfig
+storage/mysql-data
+vendor/
+/tools/*/vendor/
+bootstrap/cache
+!bootstrap/cache/.gitignore
+.phpstorm.meta.php
+Dockerfile
+_ide_helper.php
+docker-compose.yml
+docker-compose-test-ci.yml
+docker-compose-staging.yml
+docker-compose-prod.yml
