--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,7 @@ APP_NAME=SoftCity
 APP_ENV=dev
 APP_KEY=base64:G+m9Su2fOX3uLTLvYRPbLVShvC8n04XXESH8XPlB2HU=
 APP_DEBUG=true
-APP_URL=https://admin.softcityos.com
+APP_URL=http://localhost:2020/
 APP_MODE=dev
 
 LOG_CHANNEL=stack
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=db
-DB_PORT=3309
+DB_PORT=3306
 DB_DATABASE=multi_food_db
 DB_USERNAME=dg
 DB_PASSWORD=root
