--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - .:/var/www/html
       - .env.dev:/var/www/html/.env
     ports:
-      - "8082:80"
+      - "2020:80"
     environment:
       - APP_ENV=dev
       - APP_DEBUG=true
@@ -26,7 +26,7 @@ services:
       MYSQL_USER: "dg"
       MYSQL_PASSWORD: "root"
       MYSQL_DATABASE: "multi_food_db"
-      MYSQL_PORT: 3306
+      # MYSQL_PORT: 3306
       MYSQL_ALLOW_EMPTY_PASSWORD: 1
     # image: mariadb:latest
     # container_name: mariadb
@@ -36,7 +36,7 @@ services:
     #   # MYSQL_PASSWORD: "root"
     #   MYSQL_DATABASE: "multi_food_db"
     ports:
-      - 3309:3306
+      - 33061:3306
     volumes:
       - 'mysql8:/var/lib/mysql'
       - './installation/database.sql:/docker-entrypoint-initdb.d/01init.sql'
