storage problem env fixed

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
-APP_NAME=SoftCity
-APP_ENV=dev
+APP_NAME=PustiBagan
+APP_ENV=local
 APP_KEY=base64:G+m9Su2fOX3uLTLvYRPbLVShvC8n04XXESH8XPlB2HU=
 APP_DEBUG=true
 APP_URL=http://localhost:2020/
@@ -48,3 +48,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FILESYSTEM_DRIVER=public
