--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,47 +17,44 @@ services:
     restart: on-failure
     depends_on:
       - db
-  # db:
-  #   image: mysql:latest
-  #   container_name: mysql_db
-  #   environment:
-  #     MYSQL_ROOT_HOST: "%"
-  #     MYSQL_ROOT_PASSWORD: "root"
-  #     MYSQL_USER: "dg"
-  #     MYSQL_PASSWORD: "root"
-  #     MYSQL_DATABASE: "multi_food_db"
-  #     # MYSQL_PORT: 3306
-  #     MYSQL_ALLOW_EMPTY_PASSWORD: 1
-  #   # image: mariadb:latest
-  #   # container_name: mariadb
-  #   # environment:
-  #   #   MYSQL_ROOT_PASSWORD: "secret"
-  #   #   # MYSQL_USER: "dg"
-  #   #   # MYSQL_PASSWORD: "root"
-  #   #   MYSQL_DATABASE: "multi_food_db"
-  #   ports:
-  #     - 3306:3306
-  #   volumes:
-  #     - 'mysql8:/var/lib/mysql'
-  #     - './installation/database.sql:/docker-entrypoint-initdb.d/01init.sql'
-  #   networks:
-  #     - laravel
+  db:
+    image: mysql:latest
+    container_name: mysql_db
+    environment:
+      MYSQL_ROOT_HOST: "%"
+      MYSQL_ROOT_PASSWORD: "root"
+      MYSQL_USER: "dg"
+      MYSQL_PASSWORD: "root"
+      MYSQL_DATABASE: "multi_food_db"
+      # MYSQL_PORT: 3306
+      MYSQL_ALLOW_EMPTY_PASSWORD: 1
+    # image: mariadb:latest
+    # container_name: mariadb
+    # environment:
+    #   MYSQL_ROOT_PASSWORD: "secret"
+    #   # MYSQL_USER: "dg"
+    #   # MYSQL_PASSWORD: "root"
+    #   MYSQL_DATABASE: "multi_food_db"
+    ports:
+      - 3306:3306
+    volumes:
+      - 'mysql8:/var/lib/mysql'
+      - './installation/database.sql:/docker-entrypoint-initdb.d/01init.sql'
+    networks:
+      - laravel
   phpmyadmin:
     image: phpmyadmin
     container_name: phpmyadmin
     restart: always
     ports:
       - 9001:80
-    volumes:
-      - 'mysql8:/var/lib/mysql'
-      - './installation/database.sql:/docker-entrypoint-initdb.d/01init.sql'
     environment:
       PMA_HOST : "db"
       MYSQL_USERNAME: "dg"
       MYSQL_ROOT_PASSWORD: "root"
       UPLOAD_LIMIT: 300M
-    # depends_on:
-    #   - db
+    depends_on:
+      - db
     networks:
       - laravel
     # volumes:
