--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,16 +25,8 @@ services:
       MYSQL_ROOT_PASSWORD: "root"
       MYSQL_USER: "dg"
       MYSQL_PASSWORD: "root"
-      MYSQL_DATABASE: "multi_food_db"
-      # MYSQL_PORT: 3306
+      MYSQL_DATABASE: "pusti_bagan_db"
       MYSQL_ALLOW_EMPTY_PASSWORD: 1
-    # image: mariadb:latest
-    # container_name: mariadb
-    # environment:
-    #   MYSQL_ROOT_PASSWORD: "secret"
-    #   # MYSQL_USER: "dg"
-    #   # MYSQL_PASSWORD: "root"
-    #   MYSQL_DATABASE: "multi_food_db"
     ports:
       - 3306:3306
     volumes:
@@ -57,8 +49,6 @@ services:
       - db
     networks:
       - laravel
-    # volumes:
-    #   - ./docker/phpmyadmin
 networks:
   laravel:
     driver: bridge
